# Proyecto2Kiap

./: BodyZones.h  CMakeLists.txt  CargaPersonajePrincipal.h  Character.cpp  Character.h  CombatManager.h  CombatStrategy.h  CombateEnemigo.h  CombatePrincipal.h  CreadorMovimientosInferiores.cpp  CreadorMovimientosInferiores.h  CreadorMovimientosSuperiores.h  CrearMovimientos.h  DOCUMENTO_TECNICO_II_PROYECTO_JUEGO_KIAP.md  Enemy.cpp  Enemy.h  EnemyCombat.h  EnemyFactory.h  EstrategiaCombate.h  FactoryEnemigos.h  FactoryMovimientos.cpp  FactoryMovimientos.h  FactoryZonas.cpp  FactoryZonas.h  Fight.cpp  Fight.h  GestorCombates.h  Guardar.h  IMostrar.h  ISerializar.h  IShow.h  InstuccionesProyecto.md  ListMovInferiores.cpp  ListMovInferiores.h  ListMovSuperiores.cpp  ListMovSuperiores.h  LoadPlayer.h  LowerMovList.cpp  LowerMovList.h  LowerZone.cpp  (+54 more)
